<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="com.example.knihovna.viewModels.AddToAllActivityViewModel"
            />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddToAllActivity"
    android:background="@color/green_ultra_light">





    <View
        android:id="@+id/box_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15sp"
        android:background="@drawable/rounded_background"
        tools:layout_editor_absoluteX="10dp"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <AutoCompleteTextView
        android:id="@+id/input_text_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/title_hit_name_book"

        app:layout_constraintTop_toTopOf="@id/box_main"
        app:layout_constraintLeft_toLeftOf="@id/box_main"/>

    <AutoCompleteTextView
        android:id="@+id/input_text_author"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40sp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/title_hit_author"
        app:layout_constraintTop_toBottomOf="@id/input_text_name"
        app:layout_constraintLeft_toLeftOf="@id/box_main" />

    <AutoCompleteTextView
        android:id="@+id/input_text_book_series"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40sp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/title_hit_series"

        app:layout_constraintTop_toBottomOf="@id/input_text_author"
        app:layout_constraintLeft_toLeftOf="@id/box_main" />

    <GridLayout
        android:id="@+id/genre_grid"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40sp"
        app:layout_constraintTop_toBottomOf="@id/rating_grid"
        app:layout_constraintLeft_toLeftOf="@id/box_main">

        <TextView
            android:id="@+id/label_genre"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/title_genre"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/spinner_genre"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:entries="@array/genre"
            android:spinnerMode="dropdown" />
    </GridLayout>

    <GridLayout
        android:id="@+id/year_grid"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="40sp"
        app:layout_constraintTop_toBottomOf="@id/genre_grid"
        app:layout_constraintLeft_toLeftOf="@id/box_main">

        <TextView
            android:id="@+id/label_year"
            android:layout_width="wrap_content"

            android:text="@string/title_year"
            android:textSize="18dp"
 />

        <EditText
            android:id="@+id/input_year"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:inputType="date"
            android:hint=""/>
    </GridLayout>

    <GridLayout
        android:id="@+id/language_grid"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40sp"
        app:layout_constraintTop_toBottomOf="@id/year_grid"
        app:layout_constraintLeft_toLeftOf="@id/box_main">

        <TextView
            android:id="@+id/label_language"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/title_lang"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/spinner_language"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:entries="@array/languages"
            android:spinnerMode="dropdown" />
    </GridLayout>


    <GridLayout
        android:id="@+id/pages_grid"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/language_grid"
        app:layout_constraintLeft_toLeftOf="@id/box_main">


        <TextView
            android:id="@+id/label_pages"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textSize="18dp"
            android:text="@string/title_num_page"/>

        <EditText
            android:id="@+id/input_pages"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_row="0"
            android:layout_column="1"

            android:ems="10"
            android:inputType="numberSigned"
            android:hint=""
            android:layout_marginHorizontal="40sp"
/>
    </GridLayout>

    <GridLayout
        android:id="@+id/rating_grid"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="@id/box_main"
        app:layout_constraintTop_toBottomOf="@id/input_text_book_series" >


    <TextView
        android:id="@+id/label_rating"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:textSize="18dp"
        android:text="@string/title_rating"
        android:layout_marginTop="10dp"/>

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"

            android:numStars="5"
            android:scaleX="0.7"
            android:scaleY="0.7"

            android:layout_row="0"
            android:layout_column="1"
            />
    </GridLayout>

    <GridLayout
        android:id="@+id/fav_grid"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="40sp"
        app:layout_constraintTop_toBottomOf="@id/pages_grid"
        app:layout_constraintLeft_toLeftOf="@id/box_main">

        <TextView
            android:id="@+id/label_fav"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/title_fav"
            android:textSize="18dp" />

        <CheckBox
            android:id="@+id/fav_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginLeft="20dp" />
    </GridLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_button"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:onClick="clickStoreSave"

        app:layout_constraintBottom_toBottomOf="@id/box_main"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>